# di_lighting

./: .gitignore  README.md
angular_lightkeeper/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
angular_lightkeeper/src/: index.html  styles.scss
angular_lightkeeper/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  current-figure.service.spec.ts  current-figure.service.ts  figure.service.spec.ts  figure.service.ts  figure.ts  light-program.ts  light-programs.service.spec.ts  light-programs.service.ts
angular_lightkeeper/src/app/add-light-program/: add-light-program.component.html  add-light-program.component.spec.ts  add-light-program.component.ts
angular_lightkeeper/src/app/current-figure/: current-figure.component.html  current-figure.component.spec.ts  current-figure.component.ts
angular_lightkeeper/src/app/edit-light-program/: edit-light-program.component.html  edit-light-program.component.spec.ts  (+1 more)
angular_lightkeeper/src/environments/: environment.prod.ts  environment.ts
java_springserver/: build.gradle  settings.gradle
python_light_programs/: di_lights_2.py  disney_infinity_lights.py  requirements.txt
rust_di_reader/: Cargo.toml
rust_di_reader/src/: di_tags.json  main.rs
rust_di_server/: Cargo.toml
rust_di_server/migrations/2022-11-15-164240_figures/: down.sql  up.sql
rust_di_server/migrations/2022-12-17-123810_light_programs/: down.sql  up.sql
rust_di_server/src/: db.rs  main.rs
rust_di_server/src/db/: models.rs  schema.rs
(+21 files in other folders)
