[package]
name = "rust_infinity"
version = "0.1.0"
authors = ["Mary Knize <maryknize@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.8"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
libc = "0.2.98"
tokio = {version = "1", features = ["full"]}
reqwest = {version = "0.11", features = ["json"]}