[package]
name = "rust_di_server"
version = "0.1.0"
authors = ["Mary Knize <maryknize@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
diesel = {version = "2.0.0", features = ["postgres"]}
dotenvy = "0.15.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
urlencoding = "2.1.2"